# openpdf

./: openpdf-architecture-spec.md  pyproject.toml
openpdf/: __init__.py  color.py  constants.py  document.py  exceptions.py  geometry.py  metadata.py  outline.py  page.py
openpdf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openpdf/annotations/: models.py  reader.py  writer.py
openpdf/backends/: miner.py  pdfium.py  pike.py  rlab.py
openpdf/creation/: builder.py  story.py  table.py
openpdf/drawing/: canvas.py  shape.py
openpdf/forms/: models.py  reader.py  writer.py
openpdf/image/: extraction.py  rendering.py
openpdf/text/: extraction.py  layout.py  search.py
openpdf/utils/: compat.py  io.py  ocr.py
tests/: conftest.py  test_annotations.py  test_compat.py  test_constants.py  test_creation.py  test_document.py  test_drawing.py  test_forms.py  test_geometry.py  test_image.py  test_page.py  test_text.py
tests/fixtures/: generate_fixtures.py
